k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zero-to-prod-app
spec:
  selector:
    app: zero-to-prod-app
  ports:
    - port: 80
      targetPort: 8000
